--- a/css/queries.css
+++ b/css/queries.css
@@ -188,6 +188,10 @@
     margin: 0 auto;
   }
 
+  ::-webkit-scrollbar {
+    width: 0;
+  }
+
 }
 
 /* 752px */
