--- a/css/style.css
+++ b/css/style.css
@@ -229,10 +229,11 @@
   animation-duration: 1s;
 }
 
+/* ----------------------------- Stop Scrolling ----------------------------- */
+
 .stop-scroll {
-  height: 100% !important;
+  height: 100vh !important;
   overflow: hidden !important;
-  margin-right: 1.6rem !important;
 }
 
 /* ------------ */
@@ -622,7 +623,7 @@
   border-radius: 9px;
   /* background-color: #fff; */
   /* border: 0.01px solid #fafafa; */
-  box-shadow: 0 1.2rem 2.4rem rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 1.2rem 2.4rem rgba(0, 0, 0, 0.1); */
 
   transition: all 0.3s;
 }
@@ -635,6 +636,7 @@
   position: relative;
   z-index: 9;
   background: linear-gradient(135deg, #ffff, #feecec, #fbc5c5, #f68b8b);
+  box-shadow: 0 32px 64px rgba(246, 139, 139, 0.25);
 }
 
 .services-widget--2 {
@@ -642,12 +644,14 @@
   position: relative;
   z-index: 9;
   background: linear-gradient(135deg, #ffff, #e7f6f2, #b6e4d7, #3db893);
+  box-shadow: 0 32px 64px rgba(12, 166, 120, 0.25);
 }
 
 .services-widget--3 {
   position: relative;
   z-index: 9;
   background: linear-gradient(135deg, #ffff, #fff9e8, #feedba, #fdd047);
+  box-shadow: 0 32px 64px rgba(245, 159, 0, 0.25);
 }
 
 .services-widget--1::before {
@@ -902,16 +906,19 @@
 .works-img-container--1 {
   /* background: linear-gradient(135deg, #ffff, #feecec, #fbc5c5, #f68b8b); */
   background-color: #ffa8a8;
+  box-shadow: 0 4rem 8rem rgba(246, 139, 139, 0.25);
 }
 
 .works-img-container--2 {
   /* background: linear-gradient(135deg, #ffff, #e7f6f2, #b6e4d7, #3db893); */
   background-color: #63e6be;
+  box-shadow: 0 4rem 8rem rgba(12, 166, 120, 0.25);
 }
 
 .works-img-container--3 {
   /* background: linear-gradient(135deg, #ffff, #fff9e8, #feedba, #fdd047); */
   background-color: #ffe066;
+  box-shadow: 0 4rem 8rem rgba(245, 159, 0, 0.25);
 }
 
 .works-img-container .img-title {
